--- a/css/index.css
+++ b/css/index.css
@@ -1,1 +1,7 @@
-nav ul.nav-1{list-style-type: none; display: inline;}
+body{background:#E3E3E3;}
+
+section{background-color: #FFFFFF; width:80%; margin: auto;}
+
+ul.big_pic{height: 600px; width: 98%; border:10px solid transparent; overflow:hidden; position: relative;margin: auto;}
+.big_pic li{list-style: none; height: 600px; width: 100%; overflow: hidden; position: absolute; top:0; left: 0; z-index:0;background-color: url(img/loading.jpg) no-repeat center center;}
+.big_pic li img{width: 100%; height:600px;}
