大图的样式完成

--- a/css/index.css
+++ b/css/index.css
@@ -2,6 +2,72 @@ body{background:#E3E3E3;}
 
 section{background-color: #FFFFFF; width:80%; margin: auto;}
 
-ul.big_pic{height: 600px; width: 98%; border:10px solid transparent; overflow:hidden; position: relative;margin: auto;}
-.big_pic li{list-style: none; height: 600px; width: 100%; overflow: hidden; position: absolute; top:0; left: 0; z-index:0;background-color: url(img/loading.jpg) no-repeat center center;}
-.big_pic li img{width: 100%; height:600px;}
+
+ul.big_pic{
+	height: 600px; 
+	width: 98%; 
+	border:10px solid transparent; 
+	overflow:hidden; 
+	position: relative;
+	margin: auto;
+}
+.big_pic li{
+	list-style: none; 
+	height: 600px;
+	width: 100%; 
+	overflow: hidden; 
+	position: absolute; 
+	top:0; left: 0; 
+	z-index:0;
+	background-color: url(img/loading.jpg) no-repeat center center;
+}
+.big_pic li img{
+	width: 100%; 
+	height:600px;
+}
+
+
+.mark_left{
+	width:50%;height: 100%; 
+	position:absolute; 
+	background: green; 
+	left: 0;
+	top: 0;
+	filter:alpha(opacity:0);
+	opacity:0;
+	z-index: 3000;
+}
+.mark_right{
+	width:50%;height: 100%; 
+	position:absolute; 
+	background: red; 
+	right: 0;
+	top: 0;
+	filter:alpha(opacity:0);
+	opacity:0;
+	z-index: 3000;
+}
+.big_pic .prev{
+	width:60px;
+	height:60px;
+	background: url(../img/btn.gif) no-repeat;
+	left: 20px;
+	top:48%;
+	z-index: 3001;
+	cursor: pointer;
+	position: absolute;
+	filter:alpha(opacity:0);
+	opacity:0;
+}
+.big_pic .next{
+	width:60px;
+	height:60px;
+	background: url(../img/btn.gif) no-repeat 0 -60px;
+	right: 20px;
+	top:48%;
+	z-index: 3001;
+	cursor: pointer;
+	position: absolute;
+	filter:alpha(opacity:0);
+	opacity:0;
+}
