--- a/css/index.css
+++ b/css/index.css
@@ -2,9 +2,31 @@ body{background:#E3E3E3;}
 
 section{background-color: #FFFFFF; width:80%; margin: auto;}
 
+ul.nav-1{
+	display: block;
+	width: 100%;
+	height: 60px;
+	position: absolute;
+	background-color: #262626;
+	left: 0;
+	top: 0;
+}
+ul .nav-1 li{
+	width: 300px;
+	display: inline;
+	float: left;
+}
+.nav-1 .logo{
+	height:60px;
+	width:300px;
+	background: url(../img/logo.png) -35px -100px ; 
+	
+}
+
 
 ul.big_pic{
-	height: 600px; 
+	top: 60px;
+	height: 550px; 
 	width: 98%; 
 	border:10px solid transparent; 
 	overflow:hidden; 
