导航栏就算布置好了吧

--- a/css/index.css
+++ b/css/index.css
@@ -1,32 +1,68 @@
+@font-face{
+	font-family:"porkys_";
+	src:url("porkys_-wehfont.eot");
+	src:local("porkys_ Regular"),
+		local("porkys_"),
+		url("porkys_-webfont.woff") format('woff'),
+		url("porkys_-webfont.ttf") format('truetype'),
+		url("porkys_.svg#porkys_") format('svg');
+}
+
+
 body{background:#E3E3E3;}
 
-section{background-color: #FFFFFF; width:80%; margin: auto;}
+section{background-color: #FFFFFF; width:80%; height:1600px;margin: auto;}
 
 ul.nav-1{
-	display: block;
 	width: 100%;
 	height: 60px;
-	position: absolute;
+	position: fixed;
 	background-color: #262626;
 	left: 0;
 	top: 0;
+	z-index: 4000;
 }
-ul .nav-1 li{
-	width: 300px;
+.nav-1 .logo{
+	margin-right: 160px;
+	height:60px;
+	width:250px;
+	background: url(../img/logo2.png) -45px -100px; 
+}
+.nav-1 li{
 	display: inline;
 	float: left;
 }
-.nav-1 .logo{
-	height:60px;
-	width:300px;
-	background: url(../img/logo.png) -35px -100px ; 
-	
+.nav-2 li{
+	margin-right: 45px;
+	width: 70px;
+	height: 60px;
+	display: inline;
+	float: left;
+	font: 20px/60px "porkys_";
 }
-
+.nav-1 a{
+	text-decoration: none;
+}
+.nav-1 a:link{color:#888888;}
+.nav-1 a:hover{color:#FDFDFD;}
+li.log-in{
+float: right;
+height: 60px;
+margin-right: 20px;
+margin-left: 10px;
+font: 35px/60px "porkys_";
+}
+.lock{
+	float: right;
+	margin-right: 10px;
+	width:55px;
+	height:50px;
+	margin-top:5px;
+}
 
 ul.big_pic{
 	top: 60px;
-	height: 550px; 
+	height: 560px; 
 	width: 98%; 
 	border:10px solid transparent; 
 	overflow:hidden; 
