--- a/css/index.css
+++ b/css/index.css
@@ -13,119 +13,135 @@ body{background:#E3E3E3;}
 
 section{background-color: #FFFFFF; width:80%; height:1600px;margin: auto;}
 
-ul.nav-1{
-	width: 100%;
-	height: 60px;
-	position: fixed;
-	background-color: #262626;
-	left: 0;
-	top: 0;
-	z-index: 4000;
-}
-.nav-1 .logo{
-	margin-right: 160px;
-	height:60px;
-	width:250px;
-	background: url(../img/logo2.png) -45px -100px; 
-}
-.nav-1 li{
-	display: inline;
-	float: left;
-}
-.nav-2 li{
-	margin-right: 45px;
-	width: 70px;
-	height: 60px;
-	display: inline;
-	float: left;
-	font: 20px/60px "porkys_";
-}
-.nav-1 a{
-	text-decoration: none;
-}
-.nav-1 a:link{color:#888888;}
-.nav-1 a:hover{color:#FDFDFD;}
-li.log-in{
-float: right;
-height: 60px;
-margin-right: 20px;
-margin-left: 10px;
-font: 35px/60px "porkys_";
-}
-.lock{
+/*导航样式*/
+	nav{
+		position: relative;
+	}
+	ul.nav-1{
+		width: 100%;
+		height: 60px;
+		position: fixed;
+		background-color: #262626;
+		left: 0;
+		top: 0;
+		z-index: 4000;
+	}
+	.nav-1 .logo{
+		margin-right: 160px;
+		height:60px;
+		width:250px;
+		background: url(../img/logo2.png) -45px -100px; 
+	}
+	.nav-1 li{
+		display: inline;
+		float: left;
+	}
+	.nav-2 li{
+		margin-right: 45px;
+		width: 70px;
+		height: 60px;
+		display: inline;
+		float: left;
+		font: 20px/60px "porkys_";
+	}
+	.nav-1 a{
+		text-decoration: none;
+	}
+	.nav-1 a:link{color:#888888;}
+	.nav-1 a:hover{color:#FDFDFD;}
+	li.log-in{
 	float: right;
-	margin-right: 10px;
-	width:55px;
-	height:50px;
-	margin-top:5px;
-}
+	height: 60px;
+	margin-right: 20px;
+	margin-left: 10px;
+	font: 35px/60px "porkys_";
+	}
+	.lock{
+		float: right;
+		margin-right: 10px;
+		width:55px;
+		height:50px;
+		margin-top:5px;
+	}
+	.nav-text{
+		width: 800px;
+		height: 300px;
+		background-color: #262626;
+		position: absolute;
+		top:60px;
+		left:170px;
+		padding: 5px;
+		z-index: 4000;
+		display: none;
+	}
 
-ul.big_pic{
-	top: 60px;
-	height: 560px; 
-	width: 98%; 
-	border:10px solid transparent; 
-	overflow:hidden; 
-	position: relative;
-	margin: auto;
-}
-.big_pic li{
-	list-style: none; 
-	height: 600px;
-	width: 100%; 
-	overflow: hidden; 
-	position: absolute; 
-	top:0; left: 0; 
-	z-index:0;
-	background-color: url(img/loading.jpg) no-repeat center center;
-}
-.big_pic li img{
-	width: 100%; 
-	height:600px;
-}
+/*大图轮播样式*/
+	ul.big_pic{
+		top: 60px;
+		height: 560px; 
+		width: 98%; 
+		border:10px solid transparent; 
+		overflow:hidden; 
+		position: relative;
+		margin: auto;
+	}
+	.big_pic li{
+		list-style: none; 
+		height: 600px;
+		width: 100%; 
+		overflow: hidden; 
+		position: absolute; 
+		top:0; left: 0; 
+		z-index:0;
+		background-color: url(img/loading.jpg) no-repeat center center;
+	}
+	.big_pic li img{
+		width: 100%; 
+		height:600px;
+	}
 
 
-.mark_left{
-	width:50%;height: 100%; 
-	position:absolute; 
-	background: green; 
-	left: 0;
-	top: 0;
-	filter:alpha(opacity:0);
-	opacity:0;
-	z-index: 3000;
-}
-.mark_right{
-	width:50%;height: 100%; 
-	position:absolute; 
-	background: red; 
-	right: 0;
-	top: 0;
-	filter:alpha(opacity:0);
-	opacity:0;
-	z-index: 3000;
-}
-.big_pic .prev{
-	width:60px;
-	height:60px;
-	background: url(../img/btn.gif) no-repeat;
-	left: 20px;
-	top:48%;
-	z-index: 3001;
-	cursor: pointer;
-	position: absolute;
-	filter:alpha(opacity:0);
-	opacity:0;
-}
-.big_pic .next{
-	width:60px;
-	height:60px;
-	background: url(../img/btn.gif) no-repeat 0 -60px;
-	right: 20px;
-	top:48%;
-	z-index: 3001;
-	cursor: pointer;
-	position: absolute;
-	filter:alpha(opacity:0);
-	opacity:0;
-}
+	.mark_left{
+		width:50%;height: 100%; 
+		position:absolute; 
+		background: green; 
+		left: 0;
+		top: 0;
+		filter:alpha(opacity:0);
+		opacity:0;
+		z-index: 3000;
+	}
+	.mark_right{
+		width:50%;height: 100%; 
+		position:absolute; 
+		background: red; 
+		right: 0;
+		top: 0;
+		filter:alpha(opacity:0);
+		opacity:0;
+		z-index: 3000;
+	}
+	.big_pic .prev{
+		width:60px;
+		height:60px;
+		background: url(../img/btn.gif) no-repeat;
+		left: 20px;
+		top:48%;
+		z-index: 3001;
+		cursor: pointer;
+		position: absolute;
+		filter:alpha(opacity:0);
+		opacity:0;
+	}
+	.big_pic .next{
+		width:60px;
+		height:60px;
+		background: url(../img/btn.gif) no-repeat 0 -60px;
+		right: 20px;
+		top:48%;
+		z-index: 3001;
+		cursor: pointer;
+		position: absolute;
+		filter:alpha(opacity:0);
+		opacity:0;
+	}
