--- a/css/index.css
+++ b/css/index.css
@@ -27,10 +27,21 @@ section{background-color: #FFFFFF; width:80%; height:1600px;margin: auto;}
 		z-index: 4000;
 	}
 	.nav-1 .logo{
-		margin-right: 160px;
+		margin-right:10%;
 		height:60px;
-		width:250px;
-		background: url(../img/logo2.png) -45px -100px; 
+		width:20%;
+		background-color: #1C1C1C;
+		font: 35px/60px "porkys_";
+		color:white;
+
+	}
+	.logo img{
+		height: 60px;
+		width: 35%;
+		vertical-align: middle;
+	}
+	.logo span{
+
 	}
 	.nav-1 li{
 		display: inline;
