--- a/css/index.css
+++ b/css/index.css
@@ -77,7 +77,7 @@ section{background-color: #FFFFFF; width:75%; height:1600px;margin: auto;}
 		vertical-align: middle;
 
 	}
-	.nav-text{
+	div[name='nav-text']{
 		width: 800px;
 		height: 300px;
 		background-color: #262626;
@@ -85,9 +85,10 @@ section{background-color: #FFFFFF; width:75%; height:1600px;margin: auto;}
 		top:60px;
 		left:170px;
 		padding: 5px;
-		z-index: 4000;
-		display: none;
+		z-index:1;
+		
 	}
+	
 
 /*大图轮播样式*/
 	ul.big_pic{
