--- a/css/index.css
+++ b/css/index.css
@@ -85,8 +85,8 @@ section{background-color: #FFFFFF; width:75%; height:1600px;margin: auto;}
 		top:60px;
 		left:170px;
 		padding: 5px;
-		z-index:1;
-		
+		z-index:4000;
+		display: none;
 	}
 	
 
