part2照片部分，CSS采用了网络模板

--- a/css/index.css
+++ b/css/index.css
@@ -108,7 +108,7 @@ section{background-color: #FFFFFF; width:75%; height:1600px;margin: auto;}
 		position: absolute; 
 		top:0; left: 0; 
 		z-index:0;
-		background-color: url(img/loading.jpg) no-repeat center center;
+		background-color: url(../img/loading.jpg) no-repeat center center;
 	}
 	.big_pic li img{
 		width: 100%; 
@@ -160,3 +160,45 @@ section{background-color: #FFFFFF; width:75%; height:1600px;margin: auto;}
 		filter:alpha(opacity:0);
 		opacity:0;
 	}
+
+
+/* part2,左边图片*/
+.part-2 {
+	width: 100%;
+	height: 550px;
+}
+.float-left{
+	width: 60%;
+	height: 100%;
+}
+	figure {
+	margin-top: 150px;
+	padding: 15px;
+	position: relative;
+	width: 100%;
+	height: 100%;
+}
+figure img {
+	width: 70%;
+	height: 50%;
+	border-image: url('../img/side04.jpg') 30 30 30 30 round round;
+	border-width: 15px;
+	left: 20px;
+	position: absolute;
+	transform: rotate(-2deg);
+}
+figure > a + a img {
+	left: 20px;
+	top: 30px;
+	transform: rotate(-6deg);
+}
+figure > a + a + a img {
+	left: 50px;
+	top: 50px;
+	transform: rotate(-10deg);
+}
+figure > a:hover img {
+	transform: rotate(0deg);
+	transition: all 0.1s ease-in-out; /* Bonus animation! */
+	z-index: 9999;
+}
